--- a/4x4/policy.html
+++ b/4x4/policy.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <h2 lang="en-US" align="center">
-    PRIVACY POLICY MODEL FOR MOBILE APPLICATIONS
+    PRIVACY POLICY 4x4 APPLICATION
 </h2>
 <p>
     This privacy policy governs your use of the software application 4x4
