--- a/4x4/policy.html
+++ b/4x4/policy.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <title>Private policy</title>
+    <title>Privacy policy</title>
 </head>
 <body>
 <h2 lang="en-US" align="center">
@@ -16,51 +16,22 @@
 <h4 lang="en-US">
 </h4>
 <h4 lang="en-US">
-    What information does the Application obtain and how is it used?
+        We do not collect any personal information.
 </h4>
 <p>
-    <strong>User Provided Information</strong>
-</p>
-<p lang="en-US">
-    The Application obtains the information you provide when you use the
-    Application such as the connection state of device.
-</p>
+    When you download and use our mobile applications, we don’t require you to provide any information and we don’t collect any information about you or your device.
+    </p>
 <p>
-    <strong>Automatically Collected Information</strong>
+    We use only general information provided by Google Play or Google Analytics to analyze how users interact with our apps. It includes only technical characteristics of your device.
 </p>
-<p lang="en-US">
-    The Application does not collect any information automatically.
-</p>
-<h4 lang="en-US">
-</h4>
-<h4 lang="en-US">
-    Does the Application collect precise real time location information of the
-    device?
-</h4>
-<p>
-    This Application does not collect precise information about the location of
-    your mobile device.
-</p>
-<h4 lang="en-US">
-    Do third parties see and/or have access to information obtained by the
-    Application?
-</h4>
 <p>
     This Application does not share any information with third parties.
-</p>
-<h4 lang="en-US">
-    What are my opt-out rights?
-</h4>
-<p>
     You may use the standard uninstall processes as may be available as part of
     your mobile device or via the mobile application marketplace or network.
 </p>
-<h4 lang="en-US">
-    Data Retention Policy, Managing Your Information
-</h4>
-<p lang="en-US">
-    The Application does not retain your information.
-</p>
+
+<strong>We do not give out any nonpersonal information to anybody outside our company.</strong>
+
 <h4 lang="en-US">
     Changes
 </h4>
